# aicommits-rs

./: .gitignore  Cargo.toml  README.md  aicommits-rs.rb
.github/workflows/: build.yml  manual-bump-formula.yml  release.yml
src/: main.rs
src/config/: mod.rs
src/git/: mod.rs
src/openai/: mod.rs
