[package]
name = "aicommits-rs"
version = "0.1.0"
authors = ["Mohsen Zainalpour <zainalpour@gmail.com>"]
license = "MIT"
description = "A CLI that writes your git commit messages for you with AI"
readme = "README.md"
homepage = "https://github.com/EtaCassiopeia/aicommits-rs"
repository = "https://github.com/EtaCassiopeia/aicommits-rs"
keywords = ["cli", "openai", "git", "commit", "message", "ai"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
tokio = { version = "^0.2.5", features = ["full"]}
log = "^0.4.11"
serde_json = "1.0.93"
serde_derive = "1.0.152"
serde = { version = "1.0", features = ["derive"] }
surf = "2.3.0"
thiserror = "1.0.29"
ansi_term = "^0.12.1"
dialoguer = "0.10.3"
spinners-rs = "2.3.0"


