[package]
name = "aicommits-rs"
version = "0.3.0"
authors = ["Mohsen Zainalpour <zainalpour@gmail.com>"]
license = "MIT"
description = "A CLI that writes your git commit messages for you with AI"
readme = "README.md"
homepage = "https://github.com/EtaCassiopeia/aicommits-rs"
repository = "https://github.com/EtaCassiopeia/aicommits-rs"
keywords = ["cli", "openai", "git", "commit", "ai"]
categories = ["command-line-utilities"]
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
log = "0.4.17"
serde_json = "1.0.94"
serde_derive = "1.0.155"
serde = { version = "1.0", features = ["derive"] }
surf = "2.3.2"
thiserror = "1.0.39"
ansi_term = "0.12.1"
dialoguer = "0.10.3"
spinners-rs = "2.3.0"
openssl = { version = "0.9.80", features = ["vendored"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "aicommits-rs"
path = "src/main.rs"